[package]
name = "async_universe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.30.0", features = ["lazy","json","parquet","dtype-full"] }
tokio = { version = "1", features = ["full"] }
